Add Setup & Model/repo/dbcontext EFcore

--- a/WebStore/appsettings.json
+++ b/WebStore/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebStoreContext": "Server=(localdb)\\mssqllocaldb;Database=WebStoreContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
